bumping to java 21 via openrewrite